# image2ascii-web

./: Cargo.toml  README.md  image2ascii_web_bg.wasm.d.ts  index.html  styles.css
.github/workflows/: main.yml
pkg/: README.md  image2ascii_web.d.ts  image2ascii_web.js  image2ascii_web_bg.wasm  image2ascii_web_bg.wasm.d.ts  package.json
src/: character_mapping.rs  html_generation.rs  image_converter.rs  image_wrapper.rs  lib.rs  output_generator.rs
